// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`momentum detection recognizes double swipe right 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -782,
          8,
          0,
        ],
        "axisVelocity": Array [
          -1.6915201419407737,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -27,
          "deltaY": 0,
          "timeStamp": 3111.6450000263285,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        21,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "canceled": true,
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -952,
          8,
          0,
        ],
        "axisVelocity": Array [
          -0.682340725381047,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -2,
          "deltaY": 0,
          "timeStamp": 3317.0500000123866,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_CANCEL",
      },
      "range": Array [
        21,
        33,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -952,
          8,
          0,
        ],
        "axisVelocity": Array [
          -0.682340725381047,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -2,
          "deltaY": 0,
          "timeStamp": 3317.0500000123866,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        33,
      ],
      "wheelType": "ANY_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1281,
          -2,
          0,
        ],
        "axisVelocity": Array [
          -2.6581998086919674,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -43,
          "deltaY": 0,
          "timeStamp": 3678.780000016559,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        33,
        56,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1755,
          -2,
          0,
        ],
        "axisVelocity": Array [
          -0.039928129363731614,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 4477.8150000202,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        56,
        102,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1755,
          -2,
          0,
        ],
        "axisVelocity": Array [
          -0.039928129363731614,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 4477.8150000202,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        33,
        102,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe down - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -23,
          -3575,
          0,
        ],
        "axisVelocity": Array [
          0,
          -11.235294117647058,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -188,
          "timeStamp": 29003,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        19,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -23,
          -7290,
          0,
        ],
        "axisVelocity": Array [
          0,
          -0.04081632653061224,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -1,
          "timeStamp": 30302,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        19,
        95,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -23,
          -7290,
          0,
        ],
        "axisVelocity": Array [
          0,
          -0.04081632653061224,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -1,
          "timeStamp": 30302,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        95,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe down 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          7,
          -1643,
          0,
        ],
        "axisVelocity": Array [
          0,
          -2.8484848484848486,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -45,
          "timeStamp": 6926,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        41,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          7,
          -2134,
          0,
        ],
        "axisVelocity": Array [
          0,
          -0.04878048780487805,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -1,
          "timeStamp": 7709.000000000001,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        41,
        87,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          7,
          -2134,
          0,
        ],
        "axisVelocity": Array [
          0,
          -0.04878048780487805,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -1,
          "timeStamp": 7709.000000000001,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        87,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe left (mouse) - Firefox 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          610,
          0,
          0,
        ],
        "axisVelocity": Array [
          0.835820895522388,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 13,
          "deltaY": 0,
          "timeStamp": 21542,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        27,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          740,
          0,
          0,
        ],
        "axisVelocity": Array [
          0.04,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 22026,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        27,
        54,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          740,
          0,
          0,
        ],
        "axisVelocity": Array [
          0.04,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 22026,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        54,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe left - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          4720,
          -8,
          0,
        ],
        "axisVelocity": Array [
          14.058823529411764,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 235,
          "deltaY": 0,
          "timeStamp": 146329,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        17,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          9964,
          -8,
          0,
        ],
        "axisVelocity": Array [
          0.039603960396039604,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 147746,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        17,
        100,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          9964,
          -8,
          0,
        ],
        "axisVelocity": Array [
          0.039603960396039604,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 147746,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        100,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe left 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          2138,
          -15,
          0,
        ],
        "axisVelocity": Array [
          4.382352941176471,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 72,
          "deltaY": 0,
          "timeStamp": 2009,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        29,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          3001,
          -15,
          0,
        ],
        "axisVelocity": Array [
          0.04,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 2925.0000000000005,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        29,
        82,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          3001,
          -15,
          0,
        ],
        "axisVelocity": Array [
          0.04,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 1,
          "deltaY": 0,
          "timeStamp": 2925.0000000000005,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        82,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe right - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -15,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.03963731853433476,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 64035.86500001256,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        9,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -15,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.03963731853433476,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 64035.86500001256,
        },
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        9,
      ],
      "wheelType": "ANY_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -8821,
          0,
          0,
        ],
        "axisVelocity": Array [
          -20.823763587311635,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -332,
          "deltaY": 0,
          "timeStamp": 64845.06500000134,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        10,
        33,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -12774,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.0400060009027491,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 65929.5800000109,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        33,
        96,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -12774,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.0400060009027491,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 65929.5800000109,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        10,
        96,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe right 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1247,
          0,
          0,
        ],
        "axisVelocity": Array [
          -2.370280330906471,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -37,
          "deltaY": 0,
          "timeStamp": 1792.395000011311,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        25,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1634,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.0398585023158581,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 2458.8000000076136,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        25,
        63,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1634,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.0398585023158581,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 2458.8000000076136,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        63,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe up - fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -38,
          4124,
          0,
        ],
        "axisVelocity": Array [
          0,
          11.676470588235293,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 195,
          "timeStamp": 101790,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        21,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -38,
          8065,
          0,
        ],
        "axisVelocity": Array [
          0,
          0.0392156862745098,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 1,
          "timeStamp": 103107,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        21,
        98,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -38,
          8065,
          0,
        ],
        "axisVelocity": Array [
          0,
          0.0392156862745098,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 1,
          "timeStamp": 103107,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        98,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`momentum detection recognizes swipe up 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -70,
          2259,
          0,
        ],
        "axisVelocity": Array [
          0,
          6.7164179104477615,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 110,
          "timeStamp": 86430,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        23,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -70,
          3836,
          0,
        ],
        "axisVelocity": Array [
          0,
          0.04,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 1,
          "timeStamp": 87480,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        23,
        84,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -70,
          3836,
          0,
        ],
        "axisVelocity": Array [
          0,
          0.04,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": 1,
          "timeStamp": 87480,
        },
        "isMomentum": true,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        84,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;
